[package]
name = "vigil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "8.4.0"
anyhow = "1"
mime_guess = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio = "1"

#Tracing
tracing = { version = "0.1", features = ["log"] }
tracing-actix = "0.4.0"
tracing-futures = { version = "0.2", features = ["std-future"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.1"
tracing-error = "0.2"
tracing-appender = "0.2"

#Web dependaces
actix = "0.13"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4"

#Gstreamer
gstreamer = { version = "0.22.3", features = ["v1_22", "serde"] }
gstreamer-video = "0.22.4"
gstreamer-audio = "0.22.4"
